--- a/_drafts/2021-03-05-test-post.md
+++ b/_drafts/2021-03-05-test-post.md
@@ -33,4 +33,9 @@ void main(int argc, char **argv)
 
 Search using [Google](https://www.google.com)
 
+## Tables
 
+| Column A | Column B |
+| --- | --- |
+| Hot and Sour Soup | General Tso's Chicken |
+| Potstickers | Szechuan Beef |
