Updating post re: Masking and SNR

--- a/_posts/2022-02-18-magic-snr.md
+++ b/_posts/2022-02-18-magic-snr.md
@@ -35,5 +35,21 @@ I'm not sure how or if this is done with the KiwiSDR software, but
 from a signal processing point of view, it seems clear that in
 generating a signal to noise ratio, if you select portions of the
 spectrum where signals exist, and ignore portions where only noise
-exists, then your ratio of signal to noise will improve.
+exists, then your signal to noise ratio will improve.
 
+Addendum: From the [KiwiSDR
+manual](http://kiwisdr.com/quickstart/index.html#id-user-marker-masked):
+
+> - Type, and creating blocked (masked) frequencies/bands
+> The different types simply select a color for the marker label to help
+> differentiate them.
+>
+> There is one important exception. The menu entry "masked" is used to
+> create a blocked frequency or frequency range where no reception is
+> possible (i.e. no audio is heard and no waterfall appears). This is
+> useful when the Kiwi owner/admin wants to prevent users from listening
+> to certain frequencies/ranges possibly tying up channels for long
+> periods of time (e.g. Skyking HFGCS EAM broadcasts, CB band). The
+> passband area, either the default for the selected mode or the custom
+> passband field, defines the masked frequency boundaries. To define a
+> large masked band area see this [Kiwi forum post](http://forum.kiwisdr.com/index.php?p=/discussion/1965/large-masked-band-segments/p1).
