--- a/_posts/2022-02-28-17-meter-ufo.md
+++ b/_posts/2022-02-28-17-meter-ufo.md
@@ -4,7 +4,9 @@ title: "The 17M UFO"
 tags: hf spectrum surveillance unidentified data modulation
 ---
 
-I had read a few articles about the hyper-competitve world
+[![17M UFO](/assets/img/17M_UFO.png)](https://photos.app.goo.gl/TCF2WVe5nV98EDuq7)
+
+I have read a few articles about the hyper-competitve world
 of high-frequency trading, and how a few milliseconds of
 network latency might cost millions of dollars.
 
@@ -15,10 +17,7 @@ on HF.
 
 I don't know that this signal, that I've seen multiple times
 just above the amateur 17 meter band (and also above the 20
-meter band) is one of these traders or not, but it's a remarkable
+meter band), is one of these traders or not, but it's a remarkable
 signal considering that it is almost 50 kHz wide and quite 
 strong. I would guess that the transmitter power is in the range
 of 10 to 50 kilowatts to produce this kind of signal.
-
-[![17M UFO](/assets/img/17M_UFO.png)](https://photos.app.goo.gl/TCF2WVe5nV98EDuq7)
-
