--- a/_posts/2022-02-28-17-meter-ufo.md
+++ b/_posts/2022-02-28-17-meter-ufo.md
@@ -4,7 +4,8 @@ title: "The 17M UFO"
 tags: hf spectrum surveillance unidentified data modulation
 ---
 
-[![17M UFO](/assets/img/17M_UFO.png)](https://photos.app.goo.gl/TCF2WVe5nV98EDuq7)
+[17M UFO](/assets/img/17M_UFO.png)
+*<center>Super-wide "alien" signal just above 17M band</center>*
 
 I have read a few articles about the hyper-competitve world
 of high-frequency trading, and how a few milliseconds of
@@ -14,6 +15,8 @@ Apparently some of these enterprising traders have gone off
 and setup some rather sophisticated HF data links to bypass
 the whole Internet and flash their trades from here to Europe
 on HF.
+
+[![17M UFO](/assets/img/17M_UFO.png)](https://photos.app.goo.gl/TCF2WVe5nV98EDuq7)
 
 I don't know that this signal, that I've seen multiple times
 just above the amateur 17 meter band (and also above the 20
