Fixing leading image for 17M UFO

--- a/_posts/2022-02-28-17-meter-ufo.md
+++ b/_posts/2022-02-28-17-meter-ufo.md
@@ -4,7 +4,7 @@ title: "The 17M UFO"
 tags: hf spectrum surveillance unidentified data modulation
 ---
 
-[17M UFO](/assets/img/17M_UFO.png)
+![17M UFO](/assets/img/17M_UFO.png)
 *<center>Super-wide "alien" signal just above 17M band</center>*
 
 I have read a few articles about the hyper-competitve world
