--- a/_posts/2022-02-28-17-meter-ufo.md
+++ b/_posts/2022-02-28-17-meter-ufo.md
@@ -4,12 +4,12 @@ title: "The 17M UFO"
 tags: hf spectrum surveillance unidentified data modulation
 ---
 
-[![17M UFO](/assets/img/17M_UFO.png)]({% post_url 2022-02-28-17-meter-ufo %})
+[![17M UFO]({{ site.url }}{{ site.baseurl }}/assets/images/17M_UFO.png)]({% post_url 2022-02-28-17-meter-ufo %})
 *<center>Super-wide "alien" signal just above 17M band</center>*
 
-I have read a few 
+I have read a few
 [articles](https://sniperinmahwah.wordpress.com/2018/05/07/shortwave-trading-part-i-the-west-chicago-tower-mystery/)
-about the hyper-competitve world of high-frequency trading (HFT), and how a 
+about the hyper-competitve world of high-frequency trading (HFT), and how a
 few milliseconds of network latency might cost millions of dollars.
 
 Apparently some of these enterprising traders have gone off
@@ -17,11 +17,11 @@ and setup some rather sophisticated HF data links to bypass
 the whole Internet and flash their trades from here to Europe
 on HF.
 
-[![17M UFO](/assets/img/17M_UFO.png)](https://photos.app.goo.gl/TCF2WVe5nV98EDuq7)
+[![17M UFO]({{ site.url }}{{ site.baseurl }}/assets/images/17M_UFO.png)](https://photos.app.goo.gl/TCF2WVe5nV98EDuq7)
 
 I don't know that this signal, that I've seen multiple times
 just above the 17 meter amateur radio band (and also above the 20
 meter band), is one of these traders or not, but it's a remarkable
-signal considering that it is almost 50 kHz wide and quite 
+signal considering that it is almost 50 kHz wide and quite
 strong. I would guess that the transmitter power is in the range
 of 10 to 50 kilowatts to produce this kind of signal.
