Fixing image links

--- a/_posts/2022-02-18-magic-snr.md
+++ b/_posts/2022-02-18-magic-snr.md
@@ -4,7 +4,7 @@ title: "Magic Signal to Noise (SNR)"
 tags: sdr kiwisdr snr antennas rfi emi
 ---
 
-![IW2NKE SDR Water](/assets/img/IW2NKE.png "IW2NKE SDR Waterfall")
+![IW2NKE SDR Water]({{ site.url }}{{ site.baseurl }}/assets/images/IW2NKE.png "IW2NKE SDR Waterfall")
 
 Thanks to several people who have taken it upon themselves to
 [aggregate and report the data](http://rx.linkfanel.net/snr.html),
@@ -24,7 +24,7 @@ waterfall, I was stunned to see very strong signals on the regular
 amateur radio and broadcast bands, and nothing in betweee, no noise, QRM,
 or static crashes.
 
-![IW2NKE SDR Waterfall Zoom](/assets/img/IW2NKEzoom.png "IW2NKE SDR Waterfall Zoom")
+![IW2NKE SDR Waterfall Zoom]({{ site.url }}{{ site.baseurl }}/assets/images/IW2NKEzoom.png "IW2NKE SDR Waterfall Zoom")
 
 However, upon further investigation, I found out that this
 installation seems to be different that many others: Selecting a
