--- a/_posts/2023-01-20-solar-cycle-25.md
+++ b/_posts/2023-01-20-solar-cycle-25.md
@@ -32,7 +32,7 @@ I find that impressive, and it typically doesn't happen unless the
 [sunspot number](https://spaceweather.com/glossary/sunspotnumber.html)
 is over 200.
 
-![SurfingSunspots](/assets/img/SolarCycle25.png)
+![SurfingSunspots]({{ site.url }}{{ site.baseurl }}/assets/images/SolarCycle25.png)
 *Finally, the sun has come back to life*
 
 
