Bulk fix of image links

--- a/_posts/2022-02-18-magic-snr.md
+++ b/_posts/2022-02-18-magic-snr.md
@@ -4,14 +4,13 @@ title: "Magic Signal to Noise (SNR)"
 tags: sdr kiwisdr snr antennas rfi emi
 ---
 
-![IW2NKE SDR Water]({{ site.url }}{{ site.baseurl }}/assets/images/IW2NKE.png "IW2NKE SDR Waterfall")
+![IW2NKE SDR Water]({{ site.url }}{{ site.baseurl }}/assets/images/IW2NKE.png)
 
 Thanks to several people who have taken it upon themselves to
 [aggregate and report the data](http://rx.linkfanel.net/snr.html),
-along with the ability of the [KiwiSDR](http://www.kiwisdr.com/)
-to measure and report signal to
-noise ratios, many people with KiwiSDRs are competing with their
-stations to achive the highest SNR.
+along with the ability of the [KiwiSDR](http://www.kiwisdr.com/) to
+measure and report signal to noise ratios, many people with KiwiSDRs
+are competing with their stations to achive the highest SNR.
 
 Looking at the data, it seems than an average station might achieve an
 SNR of around 25 dB, a good station perhaps 30 dB, and superlative
@@ -19,12 +18,12 @@ installations over 35 dB.
 
 Imagine then my surprise when habitually checking the list, I found a
 station, [IW2NKE](http://iw2nke.ddns.net:8073/), reporting a SNR of 50
-dB. Of course, I had to investigate this anomaly.  Looking at the IW2NKE
-waterfall, I was stunned to see very strong signals on the regular
-amateur radio and broadcast bands, and nothing in betweee, no noise, QRM,
-or static crashes.
+dB. Of course, I had to investigate this anomaly.  Looking at the
+IW2NKE waterfall, I was stunned to see very strong signals on the
+regular amateur radio and broadcast bands, and nothing in betweee, no
+noise, QRM, or static crashes.
 
-![IW2NKE SDR Waterfall Zoom]({{ site.url }}{{ site.baseurl }}/assets/images/IW2NKEzoom.png "IW2NKE SDR Waterfall Zoom")
+![IW2NKE SDR Waterfall Zoom]({{ site.url }}{{ site.baseurl }}/assets/images/IW2NKEzoom.png)
 
 However, upon further investigation, I found out that this
 installation seems to be different that many others: Selecting a
