Adding image to top of solar cycle posting

--- a/_posts/2023-01-20-solar-cycle-25.md
+++ b/_posts/2023-01-20-solar-cycle-25.md
@@ -4,6 +4,10 @@ title: "Solar Cycle 25"
 tags: hf propagation solar
 ---
 
+![Sunspots]({{ site.url }}{{ site.baseurl }}/assets/images/Sunspots.jpg)
+
+*An active sun*
+
 When I got interested in HF radio, in the late 1970's and early
 1980's, I remember a couple of things: One was how much of a struggle
 it was for a young person like me (at the time) to afford the latest
